--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "countdown": "^2.6.0",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.9",
+    "exceljs": "^4.4.0",
     "express": "^4.19.2",
     "express-session": "^1.18.0",
+    "json2csv": "^6.0.0-alpha.2",
     "jsonwebtoken": "^9.0.2",
     "method-override": "^3.0.0",
     "mongoose": "^8.2.3",
@@ -29,6 +31,7 @@
     "nodemon": "^3.1.0",
     "passport": "^0.7.0",
     "passport-google-oauth2": "^0.2.0",
+    "pdfkit": "^0.15.0",
     "razorpay": "^2.9.4"
   },
   "devDependencies": {
