--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
+    "chart.js": "^4.4.3",
     "connect-mongo": "^5.1.0",
     "countdown": "^2.6.0",
+    "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.9",
     "exceljs": "^4.4.0",
